--- a/fastai_2_nb_logisticregression.ipynb
+++ b/fastai_2_nb_logisticregression.ipynb
@@ -511,7 +511,7 @@
     }
    ],
    "source": [
-    "movie_reviews.vocab.itos[:30]"
+    "movie_reviews.vocab.itos[:30] # note: sorted by popularity (frequency)"
    ]
   },
   {
@@ -1135,8 +1135,162 @@
     }
    ],
    "source": [
-    "# test if this is the same as \n",
+    "# test if this is the same as the very first bow we created\n",
     "sum(sum(csr_full == A)) == A.shape[0]*A.shape[1] # correct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csr_correct_full = CSR_to_full_scratch(*csr_correct,n_docs,n_terms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(sum(csr_full == csr_correct_full)) == csr_correct_full.shape[0]*csr_correct_full.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csr_full[]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CSR for  validation data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 32 ms, sys: 631 µs, total: 32.6 ms\n",
+      "Wall time: 31.1 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "valid_doc_term,_ = get_doc_term_matrix(movie_reviews.valid.x, len(movie_reviews.vocab.itos))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First review in val set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "211"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(movie_reviews.valid.x[0].data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  5 21 71 ... 15  5  0 52]\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie_reviews.valid.x[0].data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('xxmaj', 'to', '!')"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_reviews.vocab.itos[5],movie_reviews.vocab.itos[15],movie_reviews.vocab.itos[52]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text xxbos xxmaj this very funny xxmaj british comedy shows what might happen if a section of xxmaj london , in this case xxmaj xxunk , were to xxunk itself independent from the rest of the xxup uk and its laws , xxunk & post - war xxunk . xxmaj merry xxunk is what would happen . \n",
+       " \n",
+       "  xxmaj the explosion of a wartime bomb leads to the xxunk of ancient xxunk which show that xxmaj xxunk was xxunk to the xxmaj xxunk of xxmaj xxunk xxunk ago , a small historical xxunk long since forgotten . xxmaj to the new xxmaj xxunk , however , this is an unexpected opportunity to live as they please , free from any xxunk from xxmaj xxunk . \n",
+       " \n",
+       "  xxmaj stanley xxmaj xxunk is excellent as the minor city xxunk who suddenly finds himself leading one of the world 's xxunk xxunk . xxmaj xxunk xxmaj margaret xxmaj xxunk is a delight as the history professor who sides with xxmaj xxunk . xxmaj others in the stand - out cast include xxmaj xxunk xxmaj xxunk , xxmaj paul xxmaj xxunk , xxmaj xxunk xxmaj xxunk , xxmaj xxunk xxmaj xxunk & xxmaj sir xxmaj michael xxmaj xxunk . \n",
+       " \n",
+       "  xxmaj welcome to xxmaj xxunk !"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_reviews.valid.x[0]"
    ]
   }
  ],
